# plugin

./: README.md  README_en.md
inc/: ipluginfunction.h  ipluginmodule.h  iplugintheme.h
module/: CMakeLists.txt
module/inc/: activitybutton.h  editwidget.h  sidewidget.h
module/src/: activitybutton.cpp  editwidget.cpp  sidewidget.cpp
